--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "toder2",
+  "name": "toder",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -26,7 +26,8 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-split": "^2.0.14",
-    "zustand": "^4.4.3"
+    "react-toastify": "^10.0.5",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20.8.2",
